# tdd_python

./: .gitignore  Dockerfile  README.md  attendance_id  docker-compose.yml
exercises/failing_well/: README.md
exercises/failing_well/src/: evaluate_guess.py  validate_guess.py  wordle_game.py
exercises/failing_well/tests/: test_evaluate_guess.py  test_validate_guess_1.py  test_validate_guess_2.py  test_wordle_game.py
exercises/inside_out_tdd/: Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt  wordle-cheat
exercises/inside_out_tdd/src/: wordle_app.py
exercises/inside_out_tdd/tests/: test_example.py
exercises/introduction_to_tdd/: README.md
exercises/introduction_to_tdd/src/: test_wordle.py  wordle.py
exercises/introduction_to_tdd/tests/: test_wordle.py
exercises/outside_in_tdd/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
exercises/outside_in_tdd/src/: main.py
exercises/specifying_behaviour/: Dockerfile  README.md  docker-compose.yml
exercises/specifying_behaviour/src/: get_game_status.py  validate_guess.py
exercises/specifying_behaviour/tests/: test_get_game_status.py  test_validate_guess.py
exercises/test_data/: .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt  wordle-stats
exercises/test_data/src/: __init__.py  game_result.py  player_stats.py  report.py
exercises/test_data/tests/: test_game_result.py  test_player_stats.py  test_report.py
exercises/testing_layers/: .gitignore  Dockerfile  docker-compose.yml  package.json  requirements.txt
exercises/testing_layers/src/: __init__.py  (+2 more)
(+24 files in other folders)
