[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wordle-stats"
version = "1.0.0"
description = "Wordle statistics tracking and reporting"
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0.0"]

[project.scripts]
wordle-stats = "bin.wordle_stats:main"
